--- a/app/locale/en_US/Mage_Core.csv
+++ b/app/locale/en_US/Mage_Core.csv
@@ -131,6 +131,7 @@
 "File not found","File not found"
 "File system","File system"
 "File type for image conversions","File type for image conversions"
+"File with an extension ""%s"" is protected and cannot be uploaded.","File with an extension ""%s"" is protected and cannot be uploaded."
 "File with an extension ""%value%"" is protected and cannot be uploaded","File with an extension ""%value%"" is protected and cannot be uploaded"
 "First Day of Week","First Day of Week"
 "Flush & Apply Updates","Flush & Apply Updates"
@@ -217,6 +218,9 @@
 "Pagination Frame","Pagination Frame"
 "Pagination Frame Skip","Pagination Frame Skip"
 "Parent directory does not exist: %s","Parent directory does not exist: %s"
+"Path ""%s"" is not available and cannot be used.","Path ""%s"" is not available and cannot be used."
+"Path ""%s"" is protected and cannot be used.","Path ""%s"" is protected and cannot be used."
+"Path ""%s"" may not include parent directory traversal (""../"", "".."").","Path ""%s"" may not include parent directory traversal (""../"", "".."")."
 "Path ""%value%"" is not available and cannot be used.","Path ""%value%"" is not available and cannot be used."
 "Path ""%value%"" is protected and cannot be used.","Path ""%value%"" is protected and cannot be used."
 "PHP SOAP extension is required.","PHP SOAP extension is required."
@@ -272,6 +276,7 @@
 "Port","Port"
 "Profiler","Profiler"
 "Recovery Link Expiration Period (hours)","Recovery Link Expiration Period (hours)"
+"Requested file may not include parent directory traversal (""../"", ""..\\"" notation)","Requested file may not include parent directory traversal (""../"", ""..\\"" notation)"
 "Requested invalid store ""%s""","Requested invalid store ""%s"""
 "Request Path for Specified Store","Request Path for Specified Store"
 "Request path length exceeds allowed %s symbols.","Request path length exceeds allowed %s symbols."
@@ -390,6 +395,7 @@
 "Validate HTTP_X_FORWARDED_FOR","Validate HTTP_X_FORWARDED_FOR"
 "Validate REMOTE_ADDR","Validate REMOTE_ADDR"
 "Validation has failed.","Validation has failed."
+"Value must be a string.","Value must be a string."
 "Value must be between %d and %d","Value must be between %d and %d"
 "Variable Code must be unique.","Variable Code must be unique."
 "VAT Number","VAT Number"
