--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -9,6 +9,7 @@
 "'%value%' does not appear to be a valid local network name","'%value%' does not appear to be a valid local network name"
 "* Required Fields","* Required Fields"
 "Account confirmation is required. Please, check your e-mail for confirmation link. To resend confirmation email please <a href=""%s"">click here</a>.","Account confirmation is required. Please, check your e-mail for confirmation link. To resend confirmation email please <a href=""%s"">click here</a>."
+"Account confirmation is required. Please, check your email for the confirmation link. To resend the confirmation email please <a href=""%s"">click here</a>.","Account confirmation is required. Please, check your email for the confirmation link. To resend the confirmation email please <a href=""%s"">click here</a>."
 "Account Dashboard","Account Dashboard"
 "Account Information","Account Information"
 "Account Sharing Options","Account Sharing Options"
@@ -183,6 +184,8 @@
 "Hello, %s!","Hello, %s!"
 "HTML","HTML"
 "ID","ID"
+"If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you billing address for proper VAT calculation","If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you billing address for proper VAT calculation"
+"If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you shipping address for proper VAT calculation","If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you shipping address for proper VAT calculation"
 "If you believe this is an error, please contact us at %s","If you believe this is an error, please contact us at %s"
 "If you have an account with us, please log in.","If you have an account with us, please log in."
 "Invalid attribute option specified for attribute %s (%s), skipping the record.","Invalid attribute option specified for attribute %s (%s), skipping the record."
@@ -425,6 +428,7 @@
 "The VAT ID entered (%s) is not a valid VAT ID. The customer would belong to Customer Group %s.","The VAT ID entered (%s) is not a valid VAT ID. The customer would belong to Customer Group %s."
 "The VAT ID is valid. The current Customer Group will be used.","The VAT ID is valid. The current Customer Group will be used."
 "This account is not confirmed.","This account is not confirmed."
+"This account is not confirmed. <a href=""%s"">Click here</a> to resend confirmation email.","This account is not confirmed. <a href=""%s"">Click here</a> to resend confirmation email."
 "This customer email already exists","This customer email already exists"
 "This customer has no saved addresses.","This customer has no saved addresses."
 "This email does not require confirmation.","This email does not require confirmation."
