--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -1183,3 +1183,6 @@
 "[STORE VIEW]","[STORE VIEW]"
 "[WEBSITE]","[WEBSITE]"
 "{{base_url}} is not recommended to use in a production environment to declare the Base Unsecure URL / Base Secure URL. It is highly recommended to change this value in your Maho <a href=""%s"">configuration</a>.","{{base_url}} is not recommended to use in a production environment to declare the Base Unsecure URL / Base Secure URL. It is highly recommended to change this value in your Maho <a href=""%s"">configuration</a>."
+"Missing required fields","Missing required fields"
+"Current password field cannot be empty.","Current password field cannot be empty."
+"Invalid current password.","Invalid current password."
