--- a/app/locale/en_US/Mage_Core.csv
+++ b/app/locale/en_US/Mage_Core.csv
@@ -220,7 +220,7 @@
 "Parent directory does not exist: %s","Parent directory does not exist: %s"
 "Path ""%s"" is not available and cannot be used.","Path ""%s"" is not available and cannot be used."
 "Path ""%s"" is protected and cannot be used.","Path ""%s"" is protected and cannot be used."
-"Path ""%s"" may not include parent directory traversal (""../"", "".."").","Path ""%s"" may not include parent directory traversal (""../"", "".."")."
+"Path ""%s"" may not include parent directory traversal (""../"", ""..\\"").","Path ""%s"" may not include parent directory traversal (""../"", ""..\\"")."
 "Path ""%value%"" is not available and cannot be used.","Path ""%value%"" is not available and cannot be used."
 "Path ""%value%"" is protected and cannot be used.","Path ""%value%"" is protected and cannot be used."
 "PHP SOAP extension is required.","PHP SOAP extension is required."
