--- a/app/locale/en_US/Mage_Core.csv
+++ b/app/locale/en_US/Mage_Core.csv
@@ -131,6 +131,7 @@
 "File not found","File not found"
 "File system","File system"
 "File type for image conversions","File type for image conversions"
+"File with an extension ""%s"" is protected and cannot be uploaded","File with an extension ""%s"" is protected and cannot be uploaded"
 "File with an extension ""%s"" is protected and cannot be uploaded.","File with an extension ""%s"" is protected and cannot be uploaded."
 "File with an extension ""%value%"" is protected and cannot be uploaded","File with an extension ""%value%"" is protected and cannot be uploaded"
 "First Day of Week","First Day of Week"
