--- a/app/locale/en_US/Mage_Customer.csv
+++ b/app/locale/en_US/Mage_Customer.csv
@@ -176,8 +176,8 @@
 "Hello, %s!","Hello, %s!"
 "HTML","HTML"
 "ID","ID"
-"If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you billing address for proper VAT calculation","If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you billing address for proper VAT calculation"
-"If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you shipping address for proper VAT calculation","If you are a registered VAT customer, please click <a href=""%s"">here</a> to enter you shipping address for proper VAT calculation"
+"If you are a registered VAT customer, please <a href=""%s"">click here</a> to enter you billing address for proper VAT calculation","If you are a registered VAT customer, please <a href=""%s"">click here</a> to enter you billing address for proper VAT calculation"
+"If you are a registered VAT customer, please <a href=""%s"">click here</a> to enter you shipping address for proper VAT calculation","If you are a registered VAT customer, please <a href=""%s"">click here</a> to enter you shipping address for proper VAT calculation"
 "If you believe this is an error, please contact us at %s","If you believe this is an error, please contact us at %s"
 "If you have an account with us, please log in.","If you have an account with us, please log in."
 "Invalid attribute option specified for attribute %s (%s), skipping the record.","Invalid attribute option specified for attribute %s (%s), skipping the record."
