--- a/app/locale/en_US/Mage_Core.csv
+++ b/app/locale/en_US/Mage_Core.csv
@@ -167,6 +167,7 @@
 "Invalid MIME type.","Invalid MIME type."
 "Invalid query","Invalid query"
 "Invalid stream.","Invalid stream."
+"Invalid template path: contains parent directory traversal","Invalid template path: contains parent directory traversal"
 "Invalid template path used in layout update.","Invalid template path used in layout update."
 "Invalid transactional email code: %s","Invalid transactional email code: %s"
 "Invalid URL","Invalid URL"
@@ -271,7 +272,6 @@
 "Port","Port"
 "Profiler","Profiler"
 "Recovery Link Expiration Period (hours)","Recovery Link Expiration Period (hours)"
-"Requested file may not include parent directory traversal (""../"", ""..\\"" notation)","Requested file may not include parent directory traversal (""../"", ""..\\"" notation)"
 "Requested invalid store ""%s""","Requested invalid store ""%s"""
 "Request Path for Specified Store","Request Path for Specified Store"
 "Request path length exceeds allowed %s symbols.","Request path length exceeds allowed %s symbols."
