--- a/app/locale/en_US/Maho_Blog.csv
+++ b/app/locale/en_US/Maho_Blog.csv
@@ -13,3 +13,10 @@
 "Save Post","Save Post"
 "This post no longer exists.","This post no longer exists."
 "Total of %d post(s) were deleted","Total of %d post(s) were deleted"
+"Blog Post API","Blog Post API"
+"Get post list","Get post list"
+"Get post info","Get post info"
+"Create new post","Create new post"
+"Update post","Update post"
+"Delete post","Delete post"
+"Posts","Posts"
