--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -7,6 +7,8 @@
 "Are you sure?","Are you sure?"
 "Are you sure you want to refresh this segment?","Are you sure you want to refresh this segment?"
 "Assign to Website","Assign to Website"
+"Automatic","Automatic"
+"Automatic: Refreshed daily via cron. Manual: Must be refreshed manually.","Automatic: Refreshed daily via cron. Manual: Must be refreshed manually."
 "Cart Attributes","Cart Attributes"
 "Cart Items","Cart Items"
 "Change status","Change status"
@@ -31,6 +33,9 @@
 "Last Refreshed","Last Refreshed"
 "Leave empty to apply to all customer groups","Leave empty to apply to all customer groups"
 "Manage Segments","Manage Segments"
+"Manual","Manual"
+"Mode","Mode"
+"Name","Name"
 "Newsletter Subscription","Newsletter Subscription"
 "None","None"
 "Order Address","Order Address"
@@ -41,6 +46,7 @@
 "Please select segment(s).","Please select segment(s)."
 "Product Interactions","Product Interactions"
 "Refresh","Refresh"
+"Refresh Mode","Refresh Mode"
 "Refresh Segments","Refresh Segments"
 "Save and Continue Edit","Save and Continue Edit"
 "Save Segment","Save Segment"
