--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -18,7 +18,9 @@
 "Customer Attributes","Customer Attributes"
 "Customer Groups","Customer Groups"
 "Customers","Customers"
+"Customers (%s)","Customers (%s)"
 "Customer Segmentation Configuration","Customer Segmentation Configuration"
+"Customer Since","Customer Since"
 "Customer Segments","Customer Segments"
 "Delete","Delete"
 "Delete Segment","Delete Segment"
@@ -28,6 +30,7 @@
 "Edit Segment '%s'","Edit Segment '%s'"
 "General Information","General Information"
 "General Properties","General Properties"
+"Group","Group"
 "ID","ID"
 "Inactive","Inactive"
 "Last Refreshed","Last Refreshed"
@@ -61,5 +64,7 @@
 "Total of %d record(s) were deleted.","Total of %d record(s) were deleted."
 "Total of %d record(s) were updated.","Total of %d record(s) were updated."
 "Unable to find a segment to refresh.","Unable to find a segment to refresh."
+"View","View"
+"View Customers in Segment","View Customers in Segment"
 "Viewed Products","Viewed Products"
 "Wishlist Items","Wishlist Items"
