--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -20,14 +20,16 @@
 "Customers","Customers"
 "Customers (%s)","Customers (%s)"
 "Customer Segmentation Configuration","Customer Segmentation Configuration"
-"Customer Since","Customer Since"
 "Customer Segments","Customer Segments"
+"Customer Since","Customer Since"
+"Customers in Segment","Customers in Segment"
 "Delete","Delete"
 "Delete Segment","Delete Segment"
 "Delete Segments","Delete Segments"
 "Description","Description"
 "Edit","Edit"
 "Edit Segment '%s'","Edit Segment '%s'"
+"Email","Email"
 "General Information","General Information"
 "General Properties","General Properties"
 "Group","Group"
