--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -14,11 +14,10 @@
 "Change status","Change status"
 "Conditions","Conditions"
 "Conditions (leave blank for all customers)","Conditions (leave blank for all customers)"
-"Create New Segment","Create New Segment"
 "Customer Attributes","Customer Attributes"
 "Customer Groups","Customer Groups"
 "Customers","Customers"
-"Customers (%s)","Customers (%s)"
+"Customer Segment","Customer Segment"
 "Customer Segmentation Configuration","Customer Segmentation Configuration"
 "Customer Segments","Customer Segments"
 "Customer Since","Customer Since"
@@ -34,6 +33,7 @@
 "General Properties","General Properties"
 "Group","Group"
 "ID","ID"
+"If %s %s %s","If %s %s %s"
 "Inactive","Inactive"
 "Last Refreshed","Last Refreshed"
 "Leave empty to apply to all customer groups","Leave empty to apply to all customer groups"
@@ -43,10 +43,7 @@
 "Name","Name"
 "Newsletter Subscription","Newsletter Subscription"
 "None","None"
-"Order Address","Order Address"
-"Order Attributes","Order Attributes"
 "Order History","Order History"
-"Order Subselection","Order Subselection"
 "Personal Information","Personal Information"
 "Please select segment(s).","Please select segment(s)."
 "Product Interactions","Product Interactions"
@@ -56,6 +53,7 @@
 "Save and Continue Edit","Save and Continue Edit"
 "Save Segment","Save Segment"
 "Save Segments","Save Segments"
+"Segment Information","Segment Information"
 "Segment Name","Segment Name"
 "Shopping Cart","Shopping Cart"
 "Status","Status"
