--- a/app/locale/en_US/Mage_SalesRule.csv
+++ b/app/locale/en_US/Mage_SalesRule.csv
@@ -12,6 +12,7 @@
 "Apply To","Apply To"
 "Apply to Shipping Amount","Apply to Shipping Amount"
 "Are you sure you want to delete the selected coupon(s)?","Are you sure you want to delete the selected coupon(s)?"
+"Attribute ""%s"" %s %s %s","Attribute ""%s"" %s %s %s"
 "Auto","Auto"
 "Auto Generated Specific Coupon Codes","Auto Generated Specific Coupon Codes"
 "Buy X get Y free (discount amount is Y)","Buy X get Y free (discount amount is Y)"
@@ -59,6 +60,8 @@
 "If empty no separation.","If empty no separation."
 "If you select and save the rule you will be able to generate multiple coupon codes.","If you select and save the rule you will be able to generate multiple coupon codes."
 "Inactive","Inactive"
+"is assigned","is assigned"
+"is not assigned","is not assigned"
 "Item totals are not set for rule.","Item totals are not set for rule."
 "Labels","Labels"
 "Manage Coupon Codes","Manage Coupon Codes"
