--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -1,17 +1,25 @@
 "-- Please Select --","-- Please Select --"
 "Action","Action"
 "Active","Active"
+"Added to Cart Date","Added to Cart Date"
 "Add New Segment","Add New Segment"
 "Address Information","Address Information"
 "Add Segment","Add Segment"
+"Applied Promotion Rules","Applied Promotion Rules"
 "Are you sure?","Are you sure?"
 "Are you sure you want to refresh this segment?","Are you sure you want to refresh this segment?"
 "Assign to Website","Assign to Website"
 "Automatic","Automatic"
 "Automatic: Refreshed daily via cron. Manual: Must be refreshed manually.","Automatic: Refreshed daily via cron. Manual: Must be refreshed manually."
+"Base Row Total","Base Row Total"
+"Cart:","Cart:"
 "Cart Attributes","Cart Attributes"
+"Cart Created Date","Cart Created Date"
 "Cart Items","Cart Items"
+"Cart Status","Cart Status"
+"Cart Updated Date","Cart Updated Date"
 "Change status","Change status"
+"Completed","Completed"
 "Conditions","Conditions"
 "Conditions (leave blank for all customers)","Conditions (leave blank for all customers)"
 "Customer Attributes","Customer Attributes"
@@ -35,7 +43,10 @@
 "ID","ID"
 "If %s %s %s","If %s %s %s"
 "Inactive","Inactive"
+"Items Count","Items Count"
+"Items Quantity","Items Quantity"
 "Last Refreshed","Last Refreshed"
+"Last Updated Date","Last Updated Date"
 "Leave empty to apply to all customer groups","Leave empty to apply to all customer groups"
 "Manage Segments","Manage Segments"
 "Manual","Manual"
@@ -45,8 +56,13 @@
 "None","None"
 "Order History","Order History"
 "Personal Information","Personal Information"
+"Please save the segment first.","Please save the segment first."
+"Please select...","Please select..."
+"Please select at least one website.","Please select at least one website."
 "Please select segment(s).","Please select segment(s)."
+"Product: %s","Product: %s"
 "Product Interactions","Product Interactions"
+"Quantity in Cart","Quantity in Cart"
 "Refresh","Refresh"
 "Refresh Mode","Refresh Mode"
 "Refresh Segments","Refresh Segments"
@@ -55,7 +71,9 @@
 "Save Segments","Save Segments"
 "Segment Information","Segment Information"
 "Segment Name","Segment Name"
+"Segment name is required.","Segment name is required."
 "Shopping Cart","Shopping Cart"
+"Shopping Cart Information","Shopping Cart Information"
 "Status","Status"
 "The segment has been deleted.","The segment has been deleted."
 "The segment has been refreshed.","The segment has been refreshed."
