--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -1,17 +1,26 @@
 "-- Please Select --","-- Please Select --"
+"Account Created In Store","Account Created In Store"
 "Action","Action"
 "Active","Active"
 "Added to Cart Date","Added to Cart Date"
+"Added to Wishlist Date","Added to Wishlist Date"
 "Add New Segment","Add New Segment"
+"Address:","Address:"
 "Address Information","Address Information"
 "Add Segment","Add Segment"
+"Allow segments to be used as conditions in cart price rules","Allow segments to be used as conditions in cart price rules"
+"Allow segments to be used for newsletter targeting","Allow segments to be used for newsletter targeting"
 "Applied Promotion Rules","Applied Promotion Rules"
 "Are you sure?","Are you sure?"
 "Are you sure you want to refresh this segment?","Are you sure you want to refresh this segment?"
 "Assign to Website","Assign to Website"
 "Automatic","Automatic"
 "Automatic: Refreshed daily via cron. Manual: Must be refreshed manually.","Automatic: Refreshed daily via cron. Manual: Must be refreshed manually."
+"Auto Refresh Frequency (hours)","Auto Refresh Frequency (hours)"
+"Average Order Value","Average Order Value"
 "Base Row Total","Base Row Total"
+"Batch Size for Processing","Batch Size for Processing"
+"Cache Lifetime (seconds)","Cache Lifetime (seconds)"
 "Cart:","Cart:"
 "Cart Attributes","Cart Attributes"
 "Cart Created Date","Cart Created Date"
@@ -22,46 +31,74 @@
 "Completed","Completed"
 "Conditions","Conditions"
 "Conditions (leave blank for all customers)","Conditions (leave blank for all customers)"
+"Customer:","Customer:"
 "Customer Attributes","Customer Attributes"
 "Customer Groups","Customer Groups"
+"Customer Personal Information","Customer Personal Information"
 "Customers","Customers"
 "Customer Segment","Customer Segment"
 "Customer Segmentation Configuration","Customer Segmentation Configuration"
 "Customer Segments","Customer Segments"
 "Customer Since","Customer Since"
 "Customers in Segment","Customers in Segment"
+"Days Since Added to Wishlist","Days Since Added to Wishlist"
+"Days Since Last Order","Days Since Last Order"
+"Days Since Last View","Days Since Last View"
+"Days Since Registration","Days Since Registration"
+"Days Until Birthday","Days Until Birthday"
 "Delete","Delete"
 "Delete Segment","Delete Segment"
 "Delete Segments","Delete Segments"
 "Description","Description"
 "Edit","Edit"
+"Edit Segment","Edit Segment"
 "Edit Segment '%s'","Edit Segment '%s'"
 "Email","Email"
+"Enable Customer Segmentation","Enable Customer Segmentation"
+"Enable Newsletter Integration","Enable Newsletter Integration"
+"Enable Price Rule Integration","Enable Price Rule Integration"
+"Enable Segment Caching","Enable Segment Caching"
+"First Viewed Date","First Viewed Date"
 "General Information","General Information"
 "General Properties","General Properties"
 "Group","Group"
+"How long to cache segment membership data","How long to cache segment membership data"
+"How often to automatically refresh segment membership","How often to automatically refresh segment membership"
 "ID","ID"
 "If %s %s %s","If %s %s %s"
 "Inactive","Inactive"
+"Integrations","Integrations"
+"Is Subscribed","Is Subscribed"
 "Items Count","Items Count"
 "Items Quantity","Items Quantity"
 "Last Refreshed","Last Refreshed"
 "Last Updated Date","Last Updated Date"
+"Last Viewed Date","Last Viewed Date"
+"Last Viewed Date","Last Viewed Date"
 "Leave empty to apply to all customer groups","Leave empty to apply to all customer groups"
+"Lifetime Sales Amount","Lifetime Sales Amount"
 "Manage Segments","Manage Segments"
 "Manual","Manual"
 "Mode","Mode"
 "Name","Name"
+"New Segment","New Segment"
+"Newsletter:","Newsletter:"
 "Newsletter Subscription","Newsletter Subscription"
 "None","None"
+"Not Active","Not Active"
+"Number of customers to process in each batch","Number of customers to process in each batch"
+"Order:","Order:"
 "Order History","Order History"
+"Performance Settings","Performance Settings"
 "Personal Information","Personal Information"
 "Please save the segment first.","Please save the segment first."
 "Please select...","Please select..."
 "Please select at least one website.","Please select at least one website."
 "Please select segment(s).","Please select segment(s)."
+"Postal Code","Postal Code"
 "Product: %s","Product: %s"
 "Product Interactions","Product Interactions"
+"Purchase Date","Purchase Date"
 "Quantity in Cart","Quantity in Cart"
 "Refresh","Refresh"
 "Refresh Mode","Refresh Mode"
@@ -75,14 +112,22 @@
 "Shopping Cart","Shopping Cart"
 "Shopping Cart Information","Shopping Cart Information"
 "Status","Status"
+"Status Change Date","Status Change Date"
+"Subscription Status","Subscription Status"
 "The segment has been deleted.","The segment has been deleted."
 "The segment has been refreshed.","The segment has been refreshed."
 "The segment has been saved.","The segment has been saved."
 "This segment no longer exists.","This segment no longer exists."
 "Total of %d record(s) were deleted.","Total of %d record(s) were deleted."
 "Total of %d record(s) were updated.","Total of %d record(s) were updated."
+"Total Ordered Amount","Total Ordered Amount"
 "Unable to find a segment to refresh.","Unable to find a segment to refresh."
 "View","View"
+"View Count","View Count"
 "View Customers in Segment","View Customers in Segment"
+"Viewed:","Viewed:"
 "Viewed Products","Viewed Products"
+"Wishlist:","Wishlist:"
 "Wishlist Items","Wishlist Items"
+"Wishlist Items Count","Wishlist Items Count"
+"Wishlist Shared","Wishlist Shared"
