--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -37,6 +37,7 @@
 "Customer Personal Information","Customer Personal Information"
 "Customers","Customers"
 "Customer Segment","Customer Segment"
+"Customer Segmentation","Customer Segmentation"
 "Customer Segmentation Configuration","Customer Segmentation Configuration"
 "Customer Segments","Customer Segments"
 "Customer Since","Customer Since"
