--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -1,11 +1,9 @@
 "-- Please Select --","-- Please Select --"
 "Account Created In Store","Account Created In Store"
-"Action","Action"
-"Active","Active"
 "Added to Cart Date","Added to Cart Date"
 "Added to Wishlist Date","Added to Wishlist Date"
 "Add New Segment","Add New Segment"
-"Address:","Address:"
+"Address","Address"
 "Address Information","Address Information"
 "Add Segment","Add Segment"
 "Applied Promotion Rules","Applied Promotion Rules"
@@ -16,19 +14,16 @@
 "Automatic: Refreshed daily via cron. Manual: Must be refreshed manually.","Automatic: Refreshed daily via cron. Manual: Must be refreshed manually."
 "Average Order Value","Average Order Value"
 "Base Row Total","Base Row Total"
-"Cart:","Cart:"
+"Cart","Cart"
 "Cart Created Date","Cart Created Date"
 "Cart Items","Cart Items"
 "Cart Status","Cart Status"
 "Cart Updated Date","Cart Updated Date"
 "Change status","Change status"
 "Completed","Completed"
-"Conditions","Conditions"
 "Conditions (leave blank for all customers)","Conditions (leave blank for all customers)"
-"Customer:","Customer:"
-"Customer Groups","Customer Groups"
+"Customer","Customer"
 "Customer Personal Information","Customer Personal Information"
-"Customers","Customers"
 "Customer Segment","Customer Segment"
 "Customer Segments","Customer Segments"
 "Customer Since","Customer Since"
@@ -38,21 +33,13 @@
 "Days Since Last View","Days Since Last View"
 "Days Since Registration","Days Since Registration"
 "Days Until Birthday","Days Until Birthday"
-"Delete","Delete"
 "Delete Segment","Delete Segment"
 "Delete Segments","Delete Segments"
-"Description","Description"
-"Edit","Edit"
 "Edit Segment","Edit Segment"
 "Edit Segment '%s'","Edit Segment '%s'"
-"Email","Email"
 "First Viewed Date","First Viewed Date"
-"General Information","General Information"
 "General Properties","General Properties"
-"Group","Group"
-"ID","ID"
 "If %s %s %s","If %s %s %s"
-"Inactive","Inactive"
 "Is Subscribed","Is Subscribed"
 "Items Count","Items Count"
 "Items Quantity","Items Quantity"
@@ -65,13 +52,12 @@
 "Manage Segments","Manage Segments"
 "Manual","Manual"
 "Mode","Mode"
-"Name","Name"
 "New Segment","New Segment"
-"Newsletter:","Newsletter:"
+"Newsletter","Newsletter"
 "Newsletter Subscription","Newsletter Subscription"
 "None","None"
 "Not Active","Not Active"
-"Order:","Order:"
+"Order","Order"
 "Order History","Order History"
 "Personal Information","Personal Information"
 "Please save the segment first.","Please save the segment first."
@@ -82,7 +68,6 @@
 "Product: %s","Product: %s"
 "Purchase Date","Purchase Date"
 "Quantity in Cart","Quantity in Cart"
-"Refresh","Refresh"
 "Refresh Mode","Refresh Mode"
 "Refresh Segments","Refresh Segments"
 "Save and Continue Edit","Save and Continue Edit"
@@ -93,7 +78,6 @@
 "Segment name is required.","Segment name is required."
 "Shopping Cart","Shopping Cart"
 "Shopping Cart Information","Shopping Cart Information"
-"Status","Status"
 "Status Change Date","Status Change Date"
 "Subscription Status","Subscription Status"
 "The segment has been deleted.","The segment has been deleted."
@@ -107,8 +91,8 @@
 "View","View"
 "View Count","View Count"
 "View Customers in Segment","View Customers in Segment"
-"Viewed:","Viewed:"
+"Viewed","Viewed"
 "Viewed Products","Viewed Products"
-"Wishlist:","Wishlist:"
+"Wishlist","Wishlist"
 "Wishlist Items Count","Wishlist Items Count"
 "Wishlist Shared","Wishlist Shared"
