--- a/app/locale/en_US/Maho_CustomerSegmentation.csv
+++ b/app/locale/en_US/Maho_CustomerSegmentation.csv
@@ -12,6 +12,7 @@
 "Assign to Website","Assign to Website"
 "Automatic","Automatic"
 "Automatic: Refreshed daily via cron. Manual: Must be refreshed manually.","Automatic: Refreshed daily via cron. Manual: Must be refreshed manually."
+"Average Days Between Orders","Average Days Between Orders"
 "Average Order Value","Average Order Value"
 "Base Row Total","Base Row Total"
 "Cart","Cart"
@@ -23,16 +24,23 @@
 "Completed","Completed"
 "Conditions (leave blank for all customers)","Conditions (leave blank for all customers)"
 "Customer","Customer"
+"Customer Lifetime Value","Customer Lifetime Value"
 "Customer Personal Information","Customer Personal Information"
 "Customer Segment","Customer Segment"
 "Customer Segments","Customer Segments"
 "Customer Since","Customer Since"
 "Customers in Segment","Customers in Segment"
+"Customer Time-based","Customer Time-based"
+"days","days"
+"Days Inactive (No Login or Order)","Days Inactive (No Login or Order)"
 "Days Since Added to Wishlist","Days Since Added to Wishlist"
+"Days Since First Order","Days Since First Order"
+"Days Since Last Login","Days Since Last Login"
 "Days Since Last Order","Days Since Last Order"
 "Days Since Last View","Days Since Last View"
 "Days Since Registration","Days Since Registration"
 "Days Until Birthday","Days Until Birthday"
+"Days Without Purchase","Days Without Purchase"
 "Delete Segment","Delete Segment"
 "Delete Segments","Delete Segments"
 "Edit Segment","Edit Segment"
@@ -48,6 +56,8 @@
 "Last Viewed Date","Last Viewed Date"
 "Last Viewed Date","Last Viewed Date"
 "Leave empty to apply to all customer groups","Leave empty to apply to all customer groups"
+"Lifetime Profit (Sales - Refunds)","Lifetime Profit (Sales - Refunds)"
+"Lifetime Refunds Amount","Lifetime Refunds Amount"
 "Lifetime Sales Amount","Lifetime Sales Amount"
 "Manage Segments","Manage Segments"
 "Manual","Manual"
@@ -57,6 +67,7 @@
 "Newsletter Subscription","Newsletter Subscription"
 "None","None"
 "Not Active","Not Active"
+"Number of Orders","Number of Orders"
 "Order","Order"
 "Order History","Order History"
 "Personal Information","Personal Information"
@@ -76,6 +87,7 @@
 "Segment Information","Segment Information"
 "Segment Name","Segment Name"
 "Segment name is required.","Segment name is required."
+"Segment Refresh Cron Schedule","Segment Refresh Cron Schedule"
 "Shopping Cart","Shopping Cart"
 "Shopping Cart Information","Shopping Cart Information"
 "Status Change Date","Status Change Date"
