--- a/app/locale/en_US/Mage_Newsletter.csv
+++ b/app/locale/en_US/Mage_Newsletter.csv
@@ -17,6 +17,7 @@
 "Customer Last Name","Customer Last Name"
 "Customer Middle Name","Customer Middle Name"
 "Customer My Account Newsletter Subscriptions","Customer My Account Newsletter Subscriptions"
+"Customer Segments","Customer Segments"
 "Date Added","Date Added"
 "Date Updated","Date Updated"
 "Default Template","Default Template"
@@ -38,6 +39,7 @@
 "Invalid queue selected.","Invalid queue selected."
 "Invalid subscription confirmation code.","Invalid subscription confirmation code."
 "Invalid subscription ID.","Invalid subscription ID."
+"Leave empty to send to all newsletter subscribers. Select specific segments to target only those customers.","Leave empty to send to all newsletter subscribers. Select specific segments to target only those customers."
 "Message","Message"
 "Need to Confirm","Need to Confirm"
 "New Newsletter Template","New Newsletter Template"
