--- a/app/locale/en_US/Mage_Adminhtml.csv
+++ b/app/locale/en_US/Mage_Adminhtml.csv
@@ -345,6 +345,7 @@
 "Enable Password Authentication","Enable Password Authentication"
 "Enclose Values In:","Enclose Values In:"
 "Enter current password and press ""Save Account"" to confirm passkey change.","Enter current password and press ""Save Account"" to confirm passkey change."
+"Enter new email address:","Enter new email address:"
 "Entity Attributes","Entity Attributes"
 "Entity Type","Entity Type"
 "Entity type:","Entity type:"
