--- a/app/locale/en_US/Mage_Directory.csv
+++ b/app/locale/en_US/Mage_Directory.csv
@@ -128,3 +128,29 @@
 "Your Currency","Your Currency"
 "Your Currency:","Your Currency:"
 "Your current currency is: %s","Your current currency is: %s"
+"Import Countries","Import Countries"
+"Import Countries from Directory Data","Import Countries from Directory Data"
+"Locales","Locales"
+"Comma-separated list of Maho locales (e.g., en_US,it_IT)","Comma-separated list of Maho locales (e.g., en_US,it_IT)"
+"Update existing localized names","Update existing localized names"
+"Default: only add new locales","Default: only add new locales"
+"Preview changes without importing (Dry Run)","Preview changes without importing (Dry Run)"
+"Shows what would be imported without making actual changes","Shows what would be imported without making actual changes"
+"Import Results","Import Results"
+"Import","Import"
+"Running import...","Running import..."
+"Running...","Running..."
+"Import completed successfully.","Import completed successfully."
+"Error:","Error:"
+"Unknown error occurred.","Unknown error occurred."
+"Close","Close"
+"Network error:","Network error:"
+"Country name is required.","Country name is required."
+"Country name cannot be longer than 255 characters.","Country name cannot be longer than 255 characters."
+"A country name for this locale already exists.","A country name for this locale already exists."
+"Locale and country name are required.","Locale and country name are required."
+"Please select country name(s).","Please select country name(s)."
+"Import Regions","Import Regions"
+"Country","Country"
+"Please select a country.","Please select a country."
+"Update existing regions and localized names","Update existing regions and localized names"
