--- a/app/locale/en_US/Mage_Directory.csv
+++ b/app/locale/en_US/Mage_Directory.csv
@@ -1,6 +1,5 @@
 "%d region(s) were skipped because they have existing region names.","%d region(s) were skipped because they have existing region names."
 "-- Please select --","-- Please select --"
-"A country name for this locale already exists.","A country name for this locale already exists."
 "A country with this ID already exists.","A country with this ID already exists."
 "Add New Country","Add New Country"
 "Add New Region","Add New Region"
@@ -20,7 +19,6 @@
 "Base currency is used for all online payment transactions. Scope is defined by the catalog price scope (""Catalog"" > ""Price"" > ""Catalog Price Scope"").","Base currency is used for all online payment transactions. Scope is defined by the catalog price scope (""Catalog"" > ""Price"" > ""Catalog Price Scope"")."
 "Cannot delete region with existing region names. Please delete all region names first.","Cannot delete region with existing region names. Please delete all region names first."
 "Close","Close"
-"Comma-separated list of Maho locales (e.g., en_US,it_IT)","Comma-separated list of Maho locales (e.g., en_US,it_IT)"
 "Connection Timeout in Seconds","Connection Timeout in Seconds"
 "Continue &raquo;","Continue &raquo;"
 "Countries","Countries"
@@ -35,8 +33,6 @@
 "Country Information","Country Information"
 "Country is required.","Country is required."
 "Country Name","Country Name"
-"Country name cannot be longer than 255 characters.","Country name cannot be longer than 255 characters."
-"Country name is required.","Country name is required."
 "Currency","Currency"
 "CurrencyConverterAPI","CurrencyConverterAPI"
 "Currency Options","Currency Options"
@@ -67,8 +63,6 @@
 "Frequency","Frequency"
 "Import","Import"
 "Import completed successfully.","Import completed successfully."
-"Import Countries","Import Countries"
-"Import Countries from Directory Data","Import Countries from Directory Data"
 "Import Regions","Import Regions"
 "Import Results","Import Results"
 "Installed Currencies","Installed Currencies"
@@ -84,7 +78,6 @@
 "ISO3 code must be exactly 3 uppercase letters.","ISO3 code must be exactly 3 uppercase letters."
 "List of countries","List of countries"
 "List of regions in specified country","List of regions in specified country"
-"Locale and country name are required.","Locale and country name are required."
 "Locale and region name are required.","Locale and region name are required."
 "Locale is required.","Locale is required."
 "Locales","Locales"
@@ -94,14 +87,11 @@
 "Manage Directory","Manage Directory"
 "Manage Regions","Manage Regions"
 "Manage Translations","Manage Translations"
-"Network error:","Network error:"
 "New Country","New Country"
 "New Region","New Region"
 "No API Key was specified or an invalid API Key was specified.","No API Key was specified or an invalid API Key was specified."
 "One or more invalid symbols have been specified.","One or more invalid symbols have been specified."
-"Please select a country.","Please select a country."
 "Please select country(s).","Please select country(s)."
-"Please select country name(s).","Please select country name(s)."
 "Please select region(s).","Please select region(s)."
 "Please select region name(s).","Please select region name(s)."
 "Popular","Popular"
@@ -146,11 +136,13 @@
 "Two character ISO code (usually same as Country ID)","Two character ISO code (usually same as Country ID)"
 "Unable to initialize the import model.","Unable to initialize the import model."
 "Undefined rate from ""%s-%s"".","Undefined rate from ""%s-%s""."
-"Unknown error occurred.","Unknown error occurred."
-"Update existing localized names","Update existing localized names"
 "Update existing regions and localized names","Update existing regions and localized names"
 "WARNING:","WARNING:"
 "We can't retrieve a rate from %s for %s.","We can't retrieve a rate from %s for %s."
 "Your Currency","Your Currency"
 "Your Currency:","Your Currency:"
 "Your current currency is: %s","Your current currency is: %s"
+"Hold Ctrl/Cmd to select multiple countries","Hold Ctrl/Cmd to select multiple countries"
+"Hold Ctrl/Cmd to select multiple locales","Hold Ctrl/Cmd to select multiple locales"
+"Please select at least one country.","Please select at least one country."
+"Please select at least one locale.","Please select at least one locale."
