--- a/app/locale/en_US/Maho_Blog.csv
+++ b/app/locale/en_US/Maho_Blog.csv
@@ -1,3 +1,4 @@
+"-- Use System Default --","-- Use System Default --"
 "Add Post","Add Post"
 "Blog","Blog"
 "Blog Post","Blog Post"
@@ -10,7 +11,13 @@
 "Edit Post '%s'","Edit Post '%s'"
 "Get post info","Get post info"
 "Get post list","Get post list"
+"INDEX, FOLLOW","INDEX, FOLLOW"
+"INDEX, NOFOLLOW","INDEX, NOFOLLOW"
+"Meta Information","Meta Information"
+"Meta Title","Meta Title"
 "New Post","New Post"
+"NOINDEX, FOLLOW","NOINDEX, FOLLOW"
+"NOINDEX, NOFOLLOW","NOINDEX, NOFOLLOW"
 "Please select post(s)","Please select post(s)"
 "Posts","Posts"
 "Post was successfully deleted","Post was successfully deleted"
