--- a/app/locale/en_US/Maho_Blog.csv
+++ b/app/locale/en_US/Maho_Blog.csv
@@ -9,10 +9,12 @@
 "Delete post","Delete post"
 "Edit Post","Edit Post"
 "Edit Post '%s'","Edit Post '%s'"
+"Enable Blog Search in Autosuggest","Enable Blog Search in Autosuggest"
 "Get post info","Get post info"
 "Get post list","Get post list"
 "INDEX, FOLLOW","INDEX, FOLLOW"
 "INDEX, NOFOLLOW","INDEX, NOFOLLOW"
+"Maximum Blog Posts in Autosuggest","Maximum Blog Posts in Autosuggest"
 "Meta Information","Meta Information"
 "Meta Title","Meta Title"
 "New Post","New Post"
