--- a/app/locale/en_US/Maho_Blog.csv
+++ b/app/locale/en_US/Maho_Blog.csv
@@ -26,6 +26,7 @@
 "Post was successfully saved","Post was successfully saved"
 "Publishing Date","Publishing Date"
 "Save Post","Save Post"
+"Show in Navigation","Show in Navigation"
 "This post no longer exists.","This post no longer exists."
 "Total of %d post(s) were deleted","Total of %d post(s) were deleted"
 "Update post","Update post"
