--- a/app/locale/en_US/Maho_Blog.csv
+++ b/app/locale/en_US/Maho_Blog.csv
@@ -22,11 +22,13 @@
 "NOINDEX, NOFOLLOW","NOINDEX, NOFOLLOW"
 "Please select post(s)","Please select post(s)"
 "Posts","Posts"
+"Posts per Page","Posts per Page"
 "Post was successfully deleted","Post was successfully deleted"
 "Post was successfully saved","Post was successfully saved"
 "Publishing Date","Publishing Date"
 "Save Post","Save Post"
 "Show in Navigation","Show in Navigation"
+"There are no blog posts to display.","There are no blog posts to display."
 "This post no longer exists.","This post no longer exists."
 "Total of %d post(s) were deleted","Total of %d post(s) were deleted"
 "Update post","Update post"
