--- a/app/locale/en_US/Maho_Blog.csv
+++ b/app/locale/en_US/Maho_Blog.csv
@@ -4,6 +4,7 @@
 "Blog Post","Blog Post"
 "Blog Post API","Blog Post API"
 "Blog Posts","Blog Posts"
+"Create blog post","Create blog post"
 "Create new post","Create new post"
 "Delete Post","Delete Post"
 "Delete post","Delete post"
@@ -26,9 +27,13 @@
 "Post was successfully deleted","Post was successfully deleted"
 "Post was successfully saved","Post was successfully saved"
 "Publishing Date","Publishing Date"
+"Remove blog post","Remove blog post"
+"Retrieve blog post info","Retrieve blog post info"
+"Retrieve blog posts","Retrieve blog posts"
 "Save Post","Save Post"
 "Show in Navigation","Show in Navigation"
 "There are no blog posts to display.","There are no blog posts to display."
 "This post no longer exists.","This post no longer exists."
 "Total of %d post(s) were deleted","Total of %d post(s) were deleted"
+"Update blog post","Update blog post"
 "Update post","Update post"
