--- a/app/locale/en_US/Maho_Blog.csv
+++ b/app/locale/en_US/Maho_Blog.csv
@@ -37,3 +37,4 @@
 "Total of %d post(s) were deleted","Total of %d post(s) were deleted"
 "Update blog post","Update blog post"
 "Update post","Update post"
+"URL Prefix","URL Prefix"
