--- a/app/locale/en_US/Mage_Sitemap.csv
+++ b/app/locale/en_US/Mage_Sitemap.csv
@@ -20,6 +20,7 @@
 "ID","ID"
 "Last Time Generated","Last Time Generated"
 "Link for Google","Link for Google"
+"Maximum URLs per Sitemap File","Maximum URLs per Sitemap File"
 "Monthly","Monthly"
 "Never","Never"
 "New Sitemap","New Sitemap"
@@ -34,6 +35,7 @@
 "Show lastmod","Show lastmod"
 "Sitemap","Sitemap"
 "Sitemap generate Warnings","Sitemap generate Warnings"
+"Split sitemap files when they exceed this number of URLs (default: 20000)","Split sitemap files when they exceed this number of URLs (default: 20000)"
 "Start Time","Start Time"
 "Store View","Store View"
 "The priority must be between 0 and 1.","The priority must be between 0 and 1."
